<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activitys.EditActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.legacy.widget.Space
                    android:layout_width="match_parent"
                    android:layout_height="5dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.viewpager.widget.ViewPager
                        android:id="@+id/viewPager"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="350dp"
                        android:padding="5dp" />

<!--                    <ImageView-->
<!--                        android:layout_weight="1"-->
<!--                        android:onClick="edit_foto"-->
<!--                        android:id="@+id/foto_edit"-->
<!--                        android:layout_width="250dp"-->
<!--                        android:layout_height="250dp"-->
<!--                        android:layout_gravity="center"-->
<!--                        android:src="@drawable/logo" />-->
                    <ImageView
                        android:padding="5dp"
                        android:src="@drawable/ic_cancel_black_24dp"
                        android:id="@+id/eliminar_producto"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombre_del_producto">
                    <EditText
                        android:singleLine="true"
                        android:id="@+id/nombre_del_producto_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:paddingTop="30dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/descripcion">
                    <EditText
                        android:singleLine="true"
                        android:id="@+id/descripcion_del_producto_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:paddingTop="30dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="Colores">
                    <EditText
                        android:singleLine="true"
                        android:id="@+id/colores_del_producto_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:paddingTop="30dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="Tamaños">
                    <EditText
                        android:singleLine="true"
                        android:id="@+id/tamaños_producto_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:paddingTop="30dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="Modelos">
                    <EditText
                        android:singleLine="true"
                        android:id="@+id/modelos_producto_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:paddingTop="30dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="$ Precio de Compra">
                        <EditText
                            android:singleLine="true"
                            android:id="@+id/precio_compra_producto_edit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:digits="0123456789."
                            android:inputType="numberDecimal"
                            android:paddingLeft="10dp"
                            android:paddingTop="30dp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="$ Precio de Venta">
                        <EditText
                            android:singleLine="true"
                            android:id="@+id/precio_venta_producto_edit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:digits="0123456789."
                            android:inputType="numberDecimal"
                            android:paddingLeft="10dp"
                            android:paddingTop="30dp" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cantidad_de_productos">
                    <EditText
                        android:singleLine="true"
                        android:id="@+id/cantidad_item_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="0123456789."
                        android:inputType="numberDecimal"
                        android:paddingLeft="10dp"
                        android:paddingTop="30dp" />
                </com.google.android.material.textfield.TextInputLayout>

<!--                <com.google.android.material.textfield.TextInputLayout-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:hint="Categoría">-->
<!--                    <EditText-->
<!--                        android:singleLine="true"-->
<!--                        android:id="@+id/edit_product_categoria"-->
<!--                        android:paddingLeft="10dp"-->
<!--                        android:paddingTop="30dp"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content" />-->
<!--                </com.google.android.material.textfield.TextInputLayout>-->

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinner_edit_categoria"
                    android:scrollbarSize="20sp">

                </Spinner>

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinner_edit_estado2"
                    android:scrollbarSize="20sp">

                </Spinner>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioGroup
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <RadioButton
                            android:checked="true"
                            android:id="@+id/radio_button_inactivo_edit"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="Inactivo"/>
                        <RadioButton
                            android:id="@+id/radio_button_activo_edit"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="Activo"/>

                    </RadioGroup>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/acptar_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="Aceptar"
            android:textColor="@color/white_pres"
            android:textSize="16sp" />

        <androidx.legacy.widget.Space
            android:layout_width="5dp"
            android:layout_height="wrap_content"/>

        <Button
            android:onClick="Cancelar_Edit"
            android:id="@+id/cancelar_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/cancelar"
            android:textColor="@color/white_pres"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>